<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StandardMakerActivity">

    <TextView
        android:id="@+id/standardGuide_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/MakeStandardInfoBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StandardMaker_title" />

    <TextView
        android:id="@+id/StandardMaker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/standard_maker"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/StartingConc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_conc"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/StartingConc_editTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/StartingConc_editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/StartingConc_editTextNumber" />

    <TextView
        android:id="@+id/finalConc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_conc"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/FinalConc_editTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/FinalConc_editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FinalConc_editTextNumber" />

    <TextView
        android:id="@+id/finalVol_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/STD_final_volume"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/FinalVolume_editTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/FinalVolume_editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FinalVolume_editTextNumber" />

    <EditText
        android:id="@+id/FinalVolume_editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ml"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/FinalConc_editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/FinalConc_editTextNumber"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="calculate"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FinalVolume_editTextNumber" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/StandardResult_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/STD_result"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/StartingConc_editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/ppm_or_ul_ml"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/standardGuide_text"
        app:layout_constraintTop_toBottomOf="@+id/standardGuide_text"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/FinalConc_editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ppm_or_ul_ml"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="@+id/StartingConc_editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/StartingConc_editTextNumber"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>